--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "atropos": "^2.0.2",
     "framer-motion": "^10.16.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
