--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "atropos": "^2.0.2",
+    "clsx": "^2.1.1",
     "framer-motion": "^10.16.0",
     "legendary-cursor": "^1.0.2",
     "localforage": "^1.10.0",
@@ -22,7 +26,10 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
+    "tailwind-merge": "^3.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
