added dark veil to introducing page

--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
     "atropos": "^2.0.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^10.16.0",
     "legendary-cursor": "^1.0.2",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.542.0",
     "match-sorter": "^6.3.1",
+    "ogl": "^1.0.11",
     "react": "^18.2.0",
+    "react-bits": "^1.0.5",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-lines-ellipsis": "^0.15.3",
@@ -29,7 +33,8 @@
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
-    "tailwind-merge": "^3.3.0",
+    "tailwind-merge": "^3.3.1",
+    "tw-animate-css": "^1.3.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
