--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.542.0",
     "match-sorter": "^6.3.1",
     "mathjs": "^14.6.0",
+    "motion": "^12.23.12",
     "ogl": "^1.0.11",
     "react": "^18.2.0",
     "react-bits": "^1.0.5",
