--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.9.2"
   }
 }
